Marley's css update- I fixed the misaligned icons

--- a/407_lab3 Latest/www/css/style.css
+++ b/407_lab3 Latest/www/css/style.css
@@ -12,7 +12,7 @@ body {
 .appButton:active{
     opacity: 0.8;
     filter:alpha(opactiy=80);
-
+s
 }
 
 .padding {
@@ -24,6 +24,7 @@ body {
     color:white;
 }
 .movie{
+    align:center;
     color:white;
     border-radius: 90%;
 }
